[package]
name = "bevy_voxel"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }

# Enable optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

# Enable faster linking
[profile.dev.package.bevy]
opt-level = 3